--- a/css/styles.css
+++ b/css/styles.css
@@ -107,21 +107,48 @@ body {
   letter-spacing: 0.02em;
   color: #212121;
   margin-right: 50px;
+  position: relative;
+  /*animation*/
+  transition-property:fill, color ;
+  transition-duration:250ms ;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  }
+.header-nav-list-item::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color:var(--akcent-cl);
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition-property:opacity;
+  transition-duration:250ms ;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.header-nav-list-item:hover::after {
+  opacity: 1;
+  transform: translateY(28px);
+}
 .header-nav-list-item:last-child {
   margin-right: 0;
 }
 .active-page {
   color: var(--akcent-cl);
+
 }
+
 .header-nav-list-contacti-item {
   display: flex;
   margin-right: 50px;
   font-weight: 500;
   letter-spacing: 0.02em;
   color: #757575;
-
+    /*animation*/
+  transition-property:fill, color ;
+  transition-duration:250ms ;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pic-email{
@@ -134,6 +161,7 @@ margin-right: 10px;
 .header-nav-list-contacti-item:last-child {
   margin-right: 0;
 }
+
 .header-nav-list-contacti-item:hover,
 .header-nav-list-item:hover,
 .link:focus {
@@ -197,6 +225,9 @@ margin-right: 10px;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  transition-property:background-color;
+  transition-duration:250ms ;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon-link:hover,
 .footer-icon-link:focus {
@@ -298,8 +329,34 @@ margin-right: 10px;
   line-height: calc(42 / 36);
   text-align: center;
 }
+.about-thumb{
+  position: relative;
+}
+.label{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding: 27px 107px;
+}
+.label-desc{
+  color: var(--main-background-cl);
+  font-size: 14px;
+  font-family: var(--main-font);
+  font-weight: 700;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform:uppercase ;
+  text-align: center;
 
 
+  text-align: center;
+}
 .team {
   background-color: #f5f4fa;
   padding-top: 94px;
@@ -354,6 +411,10 @@ margin-right: 10px;
     background-color:var(--main-background-cl);
     border-radius: 50%;
     color: var(--background-cl-icon);
+      /*animation*/
+    transition-property:color, background-color;
+    transition-duration:250ms ;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
   
 .social-icon{
@@ -387,6 +448,11 @@ margin-right: 10px;
     align-items: center;
     justify-content: center;
     color: var(--background-cl-icon);
+      /*animation*/
+    transition-property:color, border-color;
+    transition-duration:250ms ;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .clients{
   fill: currentColor;
@@ -416,6 +482,13 @@ margin-right: 10px;
   justify-content: center;
   margin: 0 0 50px 0;
   padding-left: 0;
+}
+.porfolio-btn-list{
+    /*animation*/
+  transition-property:box-shadow, border-radius;
+  transition-duration:250ms;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 .porfolio-btn-list:hover,
 .porfolio-btn-list:focus {
@@ -448,14 +521,51 @@ margin-right: 10px;
 }
 .portfolio-list-img-item {
   flex-basis: calc((100% - var(--indent) * (var(--items)-1)) / var(--items));
-
+    /*animation*/
+  transition-property:box-shadow, border-radius;
+  transition-duration:250ms;
+  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-img-item:hover,
 .portfolio-list-img-item:focus{
   box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000F, 0px 1px 1px 0px #0000001F;
   border-radius: 6px 4px 1px ;
 }
+.portfolio-thumb{
+  position: relative;
+  overflow: hidden;
+}
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  padding: 63px 24px;
 
+
+  background-color: rgba(33, 150, 243, 0.9);
+ /*animation*/
+ transition-property:transform;
+ transition-duration:250ms;
+ transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.portfolio-thumb:hover .overlay{
+  transform: translateY(0);
+}
+.overlay-desc{
+  color: var(--main-background-cl);
+  font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: 400;
+  line-height:28px;
+  letter-spacing: 0.03em;
+}
 .portfolio-info {
   padding:20px 24px;
   border-right: 1px solid #eee ;
