--- a/css/styles.css
+++ b/css/styles.css
@@ -123,9 +123,6 @@ body {
   left: 0;
   bottom: 0;
   opacity: 0;
-  transition-property:opacity;
-  transition-duration:250ms ;
-  transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav-list-item:hover::after {
   opacity: 1;
@@ -281,7 +278,7 @@ margin-right: 10px;
 }
 .backdrop.is-hidden{
   visibility: hidden;
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
 }
 .backdrop{
@@ -292,6 +289,7 @@ margin-right: 10px;
   width:100%;
   height: 100%;
   background-color:rgba(0, 0, 0, 0.2);
+  transition: visibility 400ms, opacity 400ms;
   
 }
 .modal{
@@ -318,6 +316,14 @@ border-radius: 4px;
   border-radius: 50%;
   cursor: pointer;
   padding: 0;
+  background-color: var(--main-background-cl);
+}
+.modal-close {
+  position: absolute;
+  margin: 9px;
+  
+
+
 }
 .description {
   padding-top: 94px;
